--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -18,7 +18,7 @@ a {
   color: #ffffff; }
 
 .btn:focus {
-  box-shadow: 0 0 0 0.2rem #791b1b; }
+  box-shadow: 0 0 0 0.2rem #8e0303; }
 
 .btn:hover {
   box-shadow: 0 0 0 0.2rem #0d2b2c; }
@@ -57,7 +57,7 @@ a {
     .input-group .input-inset-end:focus {
       color: #595959; }
     .input-group .input-inset-end:hover {
-      color: #a32424; }
+      color: #c00404; }
 
 input {
   margin: 1rem 0rem;
@@ -75,7 +75,7 @@ input {
   transition: color 0.5s ease, border-radius 1s ease, background-color 0.5s ease; }
   input:focus {
     background: #0d2b2c;
-    border-bottom: 0.3rem solid #a32424;
+    border-bottom: 0.3rem solid #c00404;
     margin-bottom: -0.3rem; }
 
 input:-webkit-autofill,
@@ -179,7 +179,8 @@ select:-webkit-autofill:focus {
     left: 0;
     top: 3.2rem;
     background-color: #000000;
-    height: calc(100vh - 7.2rem);
+    height: calc(100vh - 5.2rem);
+    overflow-y: scroll;
     padding: 1rem 0;
     width: 100%;
     flex-direction: column;
@@ -193,14 +194,14 @@ select:-webkit-autofill:focus {
     #nav .nav-collapse .nav-menu-item {
       padding: 1rem;
       background-color: transparent;
-      color: #a32424;
+      color: #c00404;
       border-radius: 0;
       text-align: left; }
       #nav .nav-collapse .nav-menu-item:hover {
         background-color: #0d2b2c;
         color: #ffffff; }
       #nav .nav-collapse .nav-menu-item:active {
-        background-color: #a32424;
+        background-color: #c00404;
         color: #ffffff; }
 
 #nav-content {
@@ -232,6 +233,8 @@ select:-webkit-autofill:focus {
 .show #nav-content .nav-dropdowns .nav-dropdown-toggle {
   display: flex;
   animation: navIn 1s ease; }
+  .show #nav-content .nav-dropdowns .nav-dropdown-toggle h3 {
+    text-transform: uppercase; }
 
 .show #nav-content .slide-in-left {
   display: initial; }
@@ -240,46 +243,101 @@ select:-webkit-autofill:focus {
   background-color: #ffffff;
   color: #000000;
   overflow: hidden;
-  display: none;
-  height: 0; }
+  display: flex;
+  height: 0;
+  margin: 0 0 0 100%;
+  transition: height 0.5s ease; }
+  .nav-item-collapse a {
+    color: #000000;
+    font-size: 0.8rem;
+    margin-top: 1.5rem; }
+    .nav-item-collapse a:hover {
+      color: #c00404; }
+    .nav-item-collapse a i {
+      color: #c00404;
+      margin-left: 0.25rem; }
+  .nav-item-collapse button {
+    padding: 0; }
   .nav-item-collapse.show {
-    display: flex;
-    height: 100vh;
-    animation: navCollapse 0.5s ease reverse; }
-    .nav-item-collapse.show .nav-item-content {
-      display: block;
-      background-color: pink;
-      margin-left: 0;
-      transition: margin-left 1s ease; }
+    margin: 0 0 0 0;
+    padding: 0.5rem 2rem;
+    transition: margin 0.2s ease 0.5s, height 0.5s ease; }
   .nav-item-collapse.hide {
-    display: block;
-    height: 0px;
-    animation: navCollapse 0.5s ease; }
-    .nav-item-collapse.hide .nav-item-content {
-      margin-left: 100vw;
-      transition: margin-left 1s ease; }
-  .nav-item-collapse #nav-item-content {
-    display: none; }
+    padding: 0.5rem 2rem;
+    margin: 0rem; }
 
 #motorcycle {
-  width: 100%; }
+  width: 100%;
+  display: flex;
+  flex-direction: column; }
+  #motorcycle button {
+    text-transform: uppercase; }
   #motorcycle .select-a-range-toggle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 2rem;
+    margin-top: 0.75rem;
     font-size: 0.8rem;
     font-weight: 500; }
   #motorcycle .select-a-range {
-    display: flex;
-    justify-content: center; }
+    justify-content: center;
+    margin: 0; }
+    #motorcycle .select-a-range.show {
+      margin: 0;
+      transition: height 0.5s ease; }
+    #motorcycle .select-a-range.hide {
+      padding: 0rem 2rem; }
     #motorcycle .select-a-range ul {
       list-style-type: none;
       padding: 0;
       text-align: center; }
       #motorcycle .select-a-range ul li {
         margin: 1rem; }
+
+.nav-bike-category {
+  margin-top: 1.5rem; }
+  .nav-bike-category a {
+    text-transform: uppercase; }
+
+.nav-bike {
+  display: flex;
+  align-items: center; }
+  .nav-bike .bike-media {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .nav-bike .bike-media .bike-img {
+      width: 100%; }
+  .nav-bike .bike-info {
+    width: 60%; }
+    .nav-bike .bike-info .bike-info-name {
+      font-size: 0.95rem;
+      font-weight: 500;
+      margin: 0.5rem 0 1rem 0;
+      text-transform: uppercase; }
+    .nav-bike .bike-info .bike-info-price {
+      font-size: 0.9rem;
+      margin: 0;
+      font-weight: 400; }
+
+#nav-accessories {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  padding-top: 1.5rem; }
+  #nav-accessories .accessories-link {
+    width: 100%;
+    margin: 0; }
+    #nav-accessories .accessories-link .accessories-img {
+      background-color: pink;
+      height: 8rem; }
+    #nav-accessories .accessories-link .accessories-title {
+      text-transform: uppercase;
+      font-size: 0.9rem; }
+    #nav-accessories .accessories-link .accessories-subtitle {
+      display: none; }
 
 html,
 body {
@@ -292,3 +350,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
   height: 100vh; }
+
+hr {
+  width: 100%;
+  margin: 0.5rem 0 1rem 0;
+  color: #333333;
+  background-color: #333333; }
