--- a/client/src/assets/scss/_Nav.scss
+++ b/client/src/assets/scss/_Nav.scss
@@ -37,7 +37,8 @@
 		left: 0;
 		top: 3.2rem;
 		background-color: $color-2;
-		height: calc(100vh - 7.2rem);
+		height: calc(100vh - 5.2rem);
+		overflow-y: scroll;
 		padding: 1rem 0;
 		width: 100%;
 		flex-direction: column;
