--- a/client/src/assets/scss/_NavMotorcycle.scss
+++ b/client/src/assets/scss/_NavMotorcycle.scss
@@ -1,18 +1,35 @@
 #motorcycle {
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+
+	button {
+		text-transform: uppercase;
+	}
+
 	.select-a-range-toggle {
 		width: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 0.5rem 2rem;
+		margin-top: 0.75rem;
 		font-size: 0.8rem;
 		font-weight: 500;
 	}
 
 	.select-a-range {
-		display: flex;
 		justify-content: center;
+		margin: 0;
+
+		&.show {
+			margin: 0;
+			transition: height 0.5s ease;
+		}
+
+		&.hide {
+			padding: 0rem 2rem;
+		}
+
 		ul {
 			list-style-type: none;
 			padding: 0;
